<resources>
    <string name="app_name" translatable="false">Test notes</string>
    <string name="search_hint">Search notes</string>
    <string name="note_title">Enter note title</string>
    <string name="note_subtitle">Enter note subtitle</string>
    <string name="type_note_here">Type note here...</string>
    <string name="empty_title_hint">Note title can\'t be empty!</string>
    <string name="empty_note_hint">Note content can\'t be empty!</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick color</string>
    <string name="add_image">Add image</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add_dialog">ADD</string>
    <string name="cancel_dialog">CANCEL</string>
    <string name="enter_valid_url">Enter valid URL</string>
    <string name="delete_note">Delete note</string>
    <string name="delete">DELETE</string>
    <string name="delete_message">Are you sure you want to delete this note?</string>
    <string name="listening">Listening...</string>
    <string name="listening_error">An error occurred while recognising.</string>
    <string name="notification_channel_name" translatable="false">Test Notes</string>
    <string name="notification_channel_description">Test Notes Notifications</string>
    <string name="set_notification">Set notification</string>
    <string name="set">SET</string>
    <string name="notify_on">Notify on:</string>
    <string name="voice_note">Voice note</string>
</resources>