<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".activities.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:src="@drawable/ic_back"
                app:tint="@color/dark_icon_color"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageDone"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:src="@drawable/ic_done"
                app:tint="@color/dark_icon_color"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"/>

            <ImageView
                android:id="@+id/imageVoiceInput"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:src="@drawable/ic_mic"
                app:tint="@color/dark_icon_color"
                app:layout_constraintRight_toLeftOf="@id/imageDone"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"/>

            <TextView
                android:id="@+id/textViewVoiceInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_12sdp"
                android:includeFontPadding="false"
                android:textColor="@color/accent"
                android:textSize="@dimen/_13ssp"
                android:text="@string/listening"
                android:visibility="gone"
                app:layout_constraintRight_toLeftOf="@id/imageVoiceInput"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"/>
            
            <EditText
                android:id="@+id/editNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@null"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/imageBack"/>

            <TextView
                android:id="@+id/textViewDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintRight_toRightOf="@id/editNoteTitle"
                app:layout_constraintLeft_toLeftOf="@id/editNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/editNoteTitle"/>

            <TextView
                android:id="@+id/textViewNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/notify_on"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintLeft_toLeftOf="@id/textViewDateTime"
                app:layout_constraintTop_toBottomOf="@id/textViewDateTime"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textViewNotificationDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_2sdp"
                android:includeFontPadding="false"
                android:textColor="@color/text_hint_color"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintRight_toRightOf="@id/textViewDateTime"
                app:layout_constraintLeft_toRightOf="@id/textViewNotification"
                app:layout_constraintTop_toBottomOf="@id/textViewDateTime"
                android:visibility="gone"/>

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewNotificationDateTime"/>

            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/viewSubtitleIndicator"/>

            <ImageView
                android:id="@+id/imageDeleteImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/background_delete"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                app:tint="@color/light_icon_color"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote"/>

            <LinearLayout
                android:id="@+id/layoutURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imageNote">

                <TextView
                    android:id="@+id/textURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:id="@+id/imageDeleteURL"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/delete_color"/>

            </LinearLayout>

            <EditText
                android:id="@+id/editNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="@dimen/_13ssp"
                android:autoLink="web|email|phone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutURL"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        
    </ScrollView>

    <include layout="@layout/layout_misc"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>